--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,28 +1,28 @@
-# Simple workflow for deploying static content to GitHub Pages
+# Comments
 name: Deploy static content to Pages
 
 on:
-  # Runs on pushes targeting the default branch
+  # Comments
   push:
     branches: ["main"]
 
-  # Allows you to run this workflow manually from the Actions tab
+  # Comments
   workflow_dispatch:
 
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+# Comments
 permissions:
   contents: read
   pages: write
   id-token: write
 
-# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
-# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
+# Comments
+# Comments
 concurrency:
   group: "pages"
   cancel-in-progress: false
 
 jobs:
-  # Single deploy job since we're just deploying
+  # Comments
   deploy:
     environment:
       name: github-pages
@@ -36,7 +36,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          # Upload entire repository
+          # Comments
           path: '.'
       - name: Deploy to GitHub Pages
         id: deployment
